# Solvearr

./: Dockerfile  README.md  main.py  pyproject.toml  util.py
.github/workflows/: docker-build.yml
